[workspace]
resolver = "3"
members = ["systems"]

[package]
name = "bevy-nanonauts"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: remove bevy dynamic linking for release build
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "7ad5fb7", features = ["dynamic_linking"] }
systems = { path = "systems" }

# Enable lots of performance optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
