[workspace]
resolver = "3"
members = ["systems"]

[package]
name = "bevy-nanonauts"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: remove bevy dynamic linking for release build
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "7ad5fb7"}#, features = ["dynamic_linking"] }
rand = "0.9.2"
systems = { path = "systems" }

[target.'cfg(wasm32)'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.106"

# Enable lots of performance optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.release-wasm32]
inherits = "release"
opt-level = "z"